--- a/site/src/pages/adm/adm-editar-produtos/index.scss
+++ b/site/src/pages/adm/adm-editar-produtos/index.scss
@@ -128,6 +128,7 @@
     #capa1 {
         min-width: 171px;
         width: auto;
+        cursor: pointer;
         height: 171px;
     }
 
@@ -140,5 +141,64 @@
         color: #545454;
         border-radius: 3px;
         cursor: pointer;
+        margin-top: 10px;
+        border-radius: 3px;
+    }
+
+    .rightside input{
+        position: absolute;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    #imagens {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+    }
+
+    #imagens div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0px 5px;
+        width: 110px;
+        min-height: 110px;
+    }
+
+    #imagens input {
+        position: absolute;
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+    }
+    
+    #imagens img {
+        width: 88px;
+        height: 88px;
+        border: 1px solid;
+        margin: 10px 0px;
+        cursor: pointer;
+    }
+
+    #imagens label {
+        font: 15px "Inter";
+        color: #3D3D3D;
+        font-weight: 700;
+    }
+
+    #imagens button {
+        width: auto;
+        height: auto;
+        background-color: transparent;
+        border: 1px solid #545454;
+        border-radius: 5px;
+        outline: none;
+        cursor: pointer;
+        font: 15px "Inter";
+        color: #3D3D3D;
+        font-weight: 500;
     }
 }
