--- a/site/src/components/site/rodape/index.scss
+++ b/site/src/components/site/rodape/index.scss
@@ -61,7 +61,7 @@
 
 };
 
-@media(max-width: 360px) {
+@media(max-width: 500px) {
     .comp-rodape{ 
 
         h1 {
@@ -71,7 +71,7 @@
     
         a {
             
-            font: 10px "Bebas Neue";
+            font: 2vw "Bebas Neue";
             
         }
 
