--- a/site/src/pages/site/pagamento/index.scss
+++ b/site/src/pages/site/pagamento/index.scss
@@ -1,4 +1,5 @@
 .pag-pagamento{
+    width: 100vw;
     
     .conteiner{
         display: flex;
@@ -29,7 +30,6 @@
                 border: 1px solid black;
                 display: flex;
                 flex-direction: row;
-                width: 63vw;
                 justify-content: space-between;
 
                 
@@ -48,7 +48,6 @@
 
             .metodo{
                 display: flex;
-                width: 63vw;
                 justify-content: space-between;
                 margin-top: 40px;
                 padding: 35px;
@@ -77,7 +76,7 @@
                 margin: 15px;
                 display: flex;
                 align-items: center;
-                width: 60vw;
+                flex-wrap: wrap;
                 padding: 20px;
                 border-radius: 5px;
                 border: 1px solid black;
@@ -85,7 +84,6 @@
 
             .finalizar{
                 display: flex;
-                width: 60vw;
                 padding: 50px;
                 margin: 30px 15px;
                 border: 1px solid black;
@@ -174,33 +172,73 @@
 }
 
 @media(max-width: 500px) {
-    .left_pag{
-        width: 100vw;
-
-        .endereco{
+    .pag-pagamento{
+        
+        .left_pag {
+            width: 100vw;
             display: flex;
-            flex-direction: column !important;
-            width: 80vw;
-            #texto{
-                width: 400px;
+            flex-direction: column;
+            justify-content: center;
+
+            .endereco{
+                width: 90vw;
                 display: flex;
-                flex-direction: column;
-                justify-content: space-around;
-
-                p{
-                    font: 12px "inter";
-                    
-
-                }
+                flex-direction: column !important;
 
             }
+
+            .finalizar{
+                width: 90vw;
+                border: none;
+                display: flex;
+                flex-direction: column !important;
+
+            }
+
+            .Produtos{
+                justify-self: center;
+                width: 70vw;
+                align-items: center;
+                flex-direction: column;
+            }
+
+            .metodo{
+                width: 90vw;
+                display: flex;
+                flex-direction: column !important;
+            }
+
+            .cart{
+                display: flex;
+                width: 50px;
+                flex-direction: column ;
+
+            }
+
+            .endereco{
+                display: flex;
+                flex-direction: column !important;
+                width: 90vw;
+                #texto{
+                    width: 400px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+
+                    p{
+                        font: 12px "inter";
+                        
+
+                    }
+
+                }
+            }
+
         }
-
+    
+        .right_pag{
+            display: none;
+            width: 0px;
+        }
     }
- 
-    .right_pag{
-        display: none;
-        width: 0px;
-    }
-
 }
