--- a/site/src/pages/site/pagamento/index.scss
+++ b/site/src/pages/site/pagamento/index.scss
@@ -203,7 +203,8 @@
             }
 
             .metodo{
-                width: 90vw;
+                width: 90vw !important;
+
                 display: flex;
                 flex-direction: column !important;
             }
