--- a/site/src/pages/site/pedidoconcluido/index.scss
+++ b/site/src/pages/site/pedidoconcluido/index.scss
@@ -74,3 +74,35 @@
         margin-top: 30px;
     }
 }
+@media(max-width: 320px){
+    
+    
+    img{
+        height: 50px;
+        width: 50px;
+
+
+    }
+    
+    h1{
+        font: 20px "inter" !important;
+        
+    }
+
+    .pedido-infos{
+        display: flex;
+        
+        article{
+            display: flex;
+            flex-direction: row;
+            height: 200px;
+            width: 100px;
+        }
+
+        section {
+            display: flex;
+            flex-direction: column  !important;
+        }
+    
+    }
+}
