--- a/site/src/components/site/usermenu/index.scss
+++ b/site/src/components/site/usermenu/index.scss
@@ -119,6 +119,17 @@
 
 
 }    
+@media(max-width: 327px){
+    #select h1 {
+        font: 15px 'Inter';
+        font-weight: 1000;
+        margin: 0px 5px;
+        color: #383838;
+        width: 100px;
+    }
+
+}
+
 
 
 }
