--- a/site/src/pages/site/telacartoes/index.scss
+++ b/site/src/pages/site/telacartoes/index.scss
@@ -256,4 +256,15 @@
         }
     }
 }
+
+    @media(max-width: 510px) {
+        .cartaoblock{
+            width: 90vw;
+
+            button img{
+                width: 10vw;
+            }
+        }
+    }
+    
 }
