--- a/site/src/components/site/resp-usermenu/index.scss
+++ b/site/src/components/site/resp-usermenu/index.scss
@@ -61,20 +61,20 @@
         cursor: pointer;
     }
 
-    #select {
+    .select {
         display: flex;
         flex-direction: row;
         align-items: center;
-    }
 
-
-    #select h1 {
+        #text{
         font: 15px 'Inter';
         font-weight: 1000;
         margin: 0px 5px;
         color: #383838;
         width: 100px;
+        }
     }
+
 
     .off {
         display: flex;
@@ -127,6 +127,6 @@
 
 
 
-
-
 }   
+  
+
