--- a/site/src/pages/site/pedidoconcluido/index.scss
+++ b/site/src/pages/site/pedidoconcluido/index.scss
@@ -28,7 +28,7 @@
     .pedido-infos article {
         display: flex;
         flex-direction: column;
-        min-width: 653px;
+        width: 50vw;;
         min-height: 222px;
         border: 1px solid #646464;
         border-radius: 3px;
@@ -104,15 +104,20 @@
             article{
                 display: flex;
                 flex-direction: column;
-                border: 1px solid red;
-                width: 20px
+                width: 95vw;
+
+            }
+
+            section *{
+                display: flex;
+                flex-direction: column;
 
             }
 
             section{
-                display: flex;
-                flex-direction: column;
-                width: 20px;
+                width: 90vw;
+                flex-wrap: wrap;
+                text-wrap: wrap;
 
   
             }
