--- a/site/src/pages/site/cadastrarendereco/index.scss
+++ b/site/src/pages/site/cadastrarendereco/index.scss
@@ -68,7 +68,7 @@
         border-radius: 5px;
         border: 1px solid #404040;
         background-color: transparent;
-        font: 1.8vw "Inter";
+        font: 15px "Inter";
         outline: none;
         padding: 0px 10px;
     }
