--- a/site/src/pages/site/telaendereços/index.scss
+++ b/site/src/pages/site/telaendereços/index.scss
@@ -20,7 +20,7 @@
         display: flex;
         flex-direction: column;
         overflow-y: scroll;
-        height: 598px;
+        height: 150px;
         padding: 0px 10px 0px 0px;
     }
 
@@ -179,4 +179,64 @@
     .selecendblock button:hover {
         text-decoration: underline;
     }
+
+    #aparecer {
+        margin: 20px;
+    }
+
+    
+    @media (min-width: 2020px) {
+   
+
+            .comp-user-menu-resp{
+                display: none;
+            }
+            #aparecer {
+                display: none;
+            }
+        
+    }
+
+
+    @media (max-width: 2020px) {
+
+
+            .comp-user-menu-resp{
+                display: none;
+            }
+            
+            #aparecer {
+            display: none;
+        }
+        
+    }
+
+    @media (max-width: 760px) {
+       .corp{
+            flex-direction: column;
+            align-items: center;
+        .comp-user-menu {
+            display: none;
+        }
+        .comp-user-menu-resp{
+            display: block;
+        }
+
+        article {
+            flex-direction: column;
+            justify-content: center;  
+            align-items: center;      
+        }
+
+        #some{
+            display: none;
+        }
+
+        #aparecer {
+            display: block;
+        }
+        
+ }
+
+}
 }
