--- a/site/src/pages/site/cadastrarcartao/index.scss
+++ b/site/src/pages/site/cadastrarcartao/index.scss
@@ -111,10 +111,12 @@
         .doubleinpt {
             display: flex;
             flex-direction: column;
+            align-items: center;
         }
 
         .doubleinpt input {
             width: 50vw  !important;
+            
         }
 
         .buttons{
@@ -134,6 +136,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
+        }
+
+        #inputdouble{
+            display: flex;
+            align-items: center;
         }
 
         .inputs{
