--- a/site/src/pages/site/telaendereços/index.scss
+++ b/site/src/pages/site/telaendereços/index.scss
@@ -20,7 +20,7 @@
         display: flex;
         flex-direction: column;
         overflow-y: scroll;
-        height: 150px;
+        height: 598px;
         padding: 0px 10px 0px 0px;
     }
 
@@ -226,6 +226,10 @@
             flex-direction: column;
             justify-content: center;  
             align-items: center;      
+        }
+
+        .leftside {
+            height: 150px;
         }
 
         #some{
