--- a/site/src/pages/site/market/index.scss
+++ b/site/src/pages/site/market/index.scss
@@ -55,7 +55,7 @@
     flex-direction: column;
     align-items: center;
     width: 1600px;
-    height: 1000px;
+    height: 1075px;
     gap: 40px;
     margin-top: 100px;
 }
@@ -95,17 +95,20 @@
     align-items: flex-end;
 }
 
-.filtragem > select {
-    height: 48px;
-    border-radius: 10px;
-    width: 180px;
-    border: none;
-
-}
-
 .filtragem img {
     width: 25px;
 }
 
+.filtragem select {
+    height: 48px;
+    border-radius: 10px;
+    border: 1px solid #3d3d3d;
+    font-family: "Inter";
+    font-size: 15px;
+}   
+
+.select option {
+
+}
 
 
