--- a/site/src/components/site/indicacoes-produto/index.scss
+++ b/site/src/components/site/indicacoes-produto/index.scss
@@ -9,10 +9,15 @@
 }
 
 .sub {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 188px;
     height: 188px;
     border: 1px solid #d9d9d9;
     align-self: center;
+    overflow: hidden;
     
 }
 
