ajustes tela market 3

--- a/site/src/pages/site/tela-produto/index.scss
+++ b/site/src/pages/site/tela-produto/index.scss
@@ -96,6 +96,7 @@
         justify-content: space-between;
         align-items: center;
         font: 20px "Inter";
+        min-width: 260px;
         font-weight: 200;
     }
 
