--- a/site/src/pages/site/carrinho/index.scss
+++ b/site/src/pages/site/carrinho/index.scss
@@ -85,4 +85,15 @@
             }
         }
     }
+
+    @media (max-width: 500px) {
+
+        
+
+        .topicos{
+            display: none;
+        }
+        
+    }
 }
+
