agora sim tela cartão feita

--- a/site/src/pages/site/telacartoes/index.scss
+++ b/site/src/pages/site/telacartoes/index.scss
@@ -8,7 +8,7 @@
         flex-direction: row;
     }
 
-    .corp > article {
+    .corp > .geral {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
