--- a/site/src/pages/site/telacartoes/index.scss
+++ b/site/src/pages/site/telacartoes/index.scss
@@ -232,7 +232,7 @@
                 align-items: center;
             }
 
-            article{
+            .geral{
                 display: flex;
                 flex-direction: column;
             }
