--- a/site/src/pages/site/carrinho/index.scss
+++ b/site/src/pages/site/carrinho/index.scss
@@ -30,8 +30,9 @@
         border-bottom: 1px solid #404040;
         flex-direction: row;
         display: flex;
+        padding: 10px 0px;
         margin: 30px 0px;
-        justify-content: space-between;
+        justify-content: flex-end;
         
         .left{
             display: flex;
