--- a/site/src/pages/site/market/index.scss
+++ b/site/src/pages/site/market/index.scss
@@ -107,13 +107,13 @@
     .filtragem select {
         height: 48px;
         border-radius: 10px;
-        border: 1px solid #3d3d3d;
+        border: 2px solid #3d3d3d;
         font-family: "Inter";
         font-size: 15px;
     }   
     
     .select option {
-    
+        color: #3d3d3d;
     }
     
 }
